--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "do a head() of the dataframe"
+    "check the type of variables of every column"
    ]
   },
   {
@@ -121,7 +121,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "PLOT THE SURVIVORS!"
+    "plot the survivors in a horitzontal bar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "plot the percentatges and the 'not survived' column has to be red \n"
    ]
   },
   {
